# zero2prod-axum

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml.example  sqlx-data.json
.github/workflows/: ci.yml  release.yml  security-audit.yml
configuration/: base.yaml  base.yaml.template  production.yaml
migrations/: 20220115221800_create_subscriptions.sql
migrations/2022-01-14-161951_create_subscriptions/: up.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  startup.rs  telemetry.rs
src/db/: mod.rs  models.rs  schema.rs  sql_types.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health.rs  subscriptions.rs
tests/: health_check.rs
