[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/bin/main.rs"

[dependencies]
axum = "0.4.3"
http = "0.2.6"
hyper = "0.14.16"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.11"
config = "0.11.0"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
diesel = { version = "1.4.8", features = ["sqlite", "chrono", "r2d2", "uuid"] }
diesel_migrations = "1.4.0"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
tracing = "0.1.29"
tower-http = { version = "0.2.0", features = ["trace"] }


[dev-dependencies]
reqwest = "0.11.9"
