[package]
name = "zero2prod"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/bin/main.rs"

[dependencies]
axum = "0.4.8"
http = "0.2.6"
hyper = "0.14.16"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.11"
config = "0.11.0"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
tracing = "0.1.29"
tower-http = { version = "0.2.0", features = ["trace"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
serde-aux = "3.0.1"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1.9.0"
validator = "0.14.0"

[dependencies.sqlx]
version = "0.5.10"
features = [
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "offline",
]
default-features = false


[dev-dependencies]
claim = "0.5.0"
fake = "2.4.3"
once_cell = "1.9.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = "0.11.9"


[features]
default = ["postgres"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
